# mcq_generator

./: README.md  generator.py  pyproject.toml  requirements.txt
templates/: index.html
